--- a/update_kernel_kube/roles/update_kernel_on_node/tasks/update_kernel.yml
+++ b/update_kernel_kube/roles/update_kernel_on_node/tasks/update_kernel.yml
@@ -1,5 +1,5 @@
 ---
-- name: 'Update dnf cache'
+- name: 'Update apt cache'
   ansible.builtin.apt:
     update_cache: yes
   when: ansible_pkg_mgr == "apt"
