--- a/update_kernel_kube/roles/update_kernel_on_node/tasks/update_kernel.yml
+++ b/update_kernel_kube/roles/update_kernel_on_node/tasks/update_kernel.yml
@@ -1,15 +1,6 @@
 ---
-- name: 'Update apt cache'
-  ansible.builtin.apt:
-    update_cache: yes
-  when: ansible_pkg_mgr == "apt"
-
-- name: 'Update dnf cache'
-  ansible.builtin.dnf:
-    update_cache: yes
-  when: ansible_pkg_mgr == "dnf"
-
 - name: 'Update all packages'
   ansible.builtin.package:
     name: '*'
     state: latest
+    update_cache: true
