--- a/update_kernel_kube/roles/update_kernel_on_node/tasks/restart_and_wait.yml
+++ b/update_kernel_kube/roles/update_kernel_on_node/tasks/restart_and_wait.yml
@@ -1,13 +1,33 @@
 ---
+- name: 'Disable kubelet and containerd'
+  ansible.builtin.command: systemctl disable --now kubelet.service containerd.service
+
 - name: 'Restart node {{ inventory_hostname }}'
   ansible.builtin.reboot:
+
+- name: 'Destroy datasets for containerd'
+  ansible.builtin.command: "{{ item }}"
+  loop:
+    - "{{ zfs }} destroy -r {{ snapshotter_dataset }}"
+    - "{{ zfs }} destroy -r {{ containerd_dataset }}"
+    - "rm -rf {{ containerd_mountpoint }}"
+
+- name: 'Recreate datasets for containerd'
+  ansible.builtin.command: "{{ item }}"
+  loop:
+    - "{{ zfs }} create {{ containerd_dataset }} -o mountpoint={{ containerd_mountpoint }}"
+    - "{{ zfs }} create -o mountpoint={{ snapshotter_mountpoint }} {{ snapshotter_dataset }}"
+
+- name: 'Start kubelet and containerd'
+  ansible.builtin.command: >
+    systemctl enable --now kubelet.service containerd.service
 
 - name: 'Wait for node to be active ready again'
   ansible.builtin.command: >
     {{ kubectl }} get node {{ inventory_hostname }}
     -o jsonpath='{ range .status.conditions[?(@.type == "Ready")].status}{@}{ end }'
   retries: 10
-  delay: 15
+  delay: 30
   register: kubectl_node_ready
   delegate_to: "{{ groups['kube_masters'][0] }}"
   until: kubectl_node_ready.stdout == 'True'
