Add " to {{ item }} in previous commit, optinally mount dataset and change service from "stopped" to "restarted"

--- a/update_kernel_kube/roles/update_kernel_on_node/tasks/restart_and_wait.yml
+++ b/update_kernel_kube/roles/update_kernel_on_node/tasks/restart_and_wait.yml
@@ -1,7 +1,7 @@
 ---
-- name: 'Disable kubelet and containerd'
+- name: 'Disable and stop kubelet and containerd'
   ansible.builtin.service:
-    name: {{ item }}
+    name: "{{ item }}"
     state: stopped
     enabled: False
   with_items: 
@@ -24,10 +24,17 @@
     - "{{ zfs }} create {{ containerd_dataset }} -o mountpoint={{ containerd_mountpoint }}"
     - "{{ zfs }} create -o mountpoint={{ snapshotter_mountpoint }} {{ snapshotter_dataset }}"
 
-- name: 'Start kubelet and containerd'
+- name: 'Mount datasets for containerd if necessary'
+  ansible.builtin.command: "{{ item }}"
+  loop:
+    - "{{ zfs }} mount {{ containerd_dataset }}"
+    - "{{ zfs }} mount {{ snapshotter_dataset }}"
+  ignore_errors: true
+
+- name: 'Enable and start kubelet and containerd'
   ansible.builtin.service:
-    name: {{ item }}
-    state: stopped
+    name: "{{ item }}"
+    state: restarted
     enabled: True
   with_items: 
     - kubelet
